--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
           </div>
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/Canvas sheet.png" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/Canvassheet.png" class="img-fluid" alt="">
               <p style="text-align: center ; font-weight:bold;">Canvas Sheet</p>
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/Canvas sheet.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 2"><i class="bx bx-plus"></i></a>
