--- a/index.html
+++ b/index.html
@@ -317,9 +317,9 @@
           </div>
         </div>
 
-        <!-- <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="100">
+        <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="100">
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+          <!-- <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
@@ -328,6 +328,17 @@
               </div>
             </div>
           </div> -->
+          
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/shootingGame.png" class="img-fluid" alt="">
+              <p style="text-align: center ; font-weight:bold;">Canvas Sheet</p>
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/shootingGame.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 1"><i class="bx bx-plus"></i></a>
+                <a href="./gameFolder/shootingGame/index.html" title="More Details" target="_blank"><i class="bx bx-link">More Details</i></a>
+              </div>
+            </div>
+          </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-wrap">
@@ -344,7 +355,7 @@
               <img src="assets/img/portfolio/Canvassheet.png" class="img-fluid" alt="">
               <p style="text-align: center ; font-weight:bold;">Canvas Sheet</p>
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/Canvas sheet.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 2"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/portfolio/Canvassheet.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 2"><i class="bx bx-plus"></i></a>
                 <a href="canvasSheet/canvas.html" title="More Details" target="_blank"><i class="bx bx-link">More Details</i></a>
               </div>
             </div>
