--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
           <a href="https://www.facebook.com/anuragchandravanshi99/" class="facebook" target="_blank"><i class="bx bxl-facebook"></i></a>
           <a href="https://www.instagram.com/anuragsingh7429/" class="instagram" target="_blank"><i class="bx bxl-instagram"></i></a>
           <a href="https://www.linkedin.com/in/anurag-singh-a835021a4/" class="linkedin" target="_blank"><i class="bx bxl-linkedin"></i></a>
+          <a href="https://github.com/anuragchandravanshi99" class="github" target="_blank"><i class="bx bxl-github"></i></a>
         </div>
       </div>
 
