--- a/index.html
+++ b/index.html
@@ -333,9 +333,9 @@
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/shootingGame.png" class="img-fluid" alt="">
-              <p style="text-align: center ; font-weight:bold;">Canvas Sheet</p>
+              <p style="text-align: center ; font-weight:bold;">Shooting Game</p>
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/shootingGame.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 1"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/portfolio/shootingGame.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Shooting Game"><i class="bx bx-plus"></i></a>
                 <a href="./gameFolder/shootingGame/index.html" title="More Details" target="_blank"><i class="bx bx-link">More Details</i></a>
               </div>
             </div>
