--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   ======================================================== -->
 </head>
 
-<body>
+<body oncontextmenu="return false;" >
 
   <!-- ======= Mobile nav toggle button ======= -->
   <i class="bi bi-list mobile-nav-toggle d-xl-none"></i>
@@ -663,5 +663,29 @@
   <script src="assets/js/main.js"></script>
 
 </body>
+                                 
+<script>
+    document.onkeydown = function(e){
+        if(event.keyCode == 123){
+            return false;
+        }
+
+        if(e.ctrlKey && e.shiftKey && e.keyCode == 'I'.charCodeAt(0)){
+            return false;
+        }
+
+        if(e.ctrlKey && e.shiftKey && e.keyCode == 'J'.charCodeAt(0)){
+            return false;
+        }
+
+        if(e.ctrlKey && e.keyCode == 'U'.charCodeAt(0)){
+            return false;
+        }
+    }
+    window.addEventListener('contextmenu', (event) => {
+    event.preventDefault()
+    })
+
+</script>
 
 </html>
